# bookManagement

./: .gitignore  README.md  db.sqlite3  pyproject.toml  pytest.ini
book/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
book/migrations/: 0001_initial.py  0002_auto_20201118_1141.py  0003_auto_20201125_1142.py  0003_auto_20201125_1328.py  0004_merge_20201127_0509.py  0005_auto_20201127_1534.py
book/templates/book/: author.html  author_delete.html  author_edit.html  author_register.html  base.html  book_delete.html  book_detail.html  book_edit.html  book_register.html  book_shelf.html  bookshelf.html  category.html  category_delete.html  category_edit.html  category_register.html  index.html  login.html  mypage.html  signup.html
book/tests/: test_api.py  test_author.py  test_book.py  test_category.py  test_csv_export.py  test_csv_import.py
book/tests/testFiles/: book_upload_file_blank_field_test.csv  book_upload_file_csv_duplicate_test.csv  book_upload_file_db_duplicate_test.csv  book_upload_file_multiple_error_test.csv  book_upload_file_regular_test.csv  book_upload_file_wrong_date_format_test.csv  book_upload_file_wrong_file_test.txt
bookProject/: settings.py  urls.py
djangotask/: settings.py  urls.py
frontend/: package-lock.json
frontend/src/: App.vue  router.js
frontend/src/components/: NavBar.vue
frontend/src/views/: Author.vue  AuthorList.vue  AuthorRegister.vue  Book.vue  BookList.vue  BookRegister.vue  CategoryRegister.vue
libraryProject/: settings.py  urls.py
