[tool.poetry]
name = "bookmanagement"
version = "0.1.0"
description = ""
authors = ["Ryo Yamamoto <ryochaaaan0414@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^2.2.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
